# reliability-control-plane

./: README.md
incident-simulator/: .gitignore  README.md  pyproject.toml
incident-simulator/incident_simulator/: __init__.py  cli.py  core.py
incident-simulator/tests/: test_core.py
reliability-lab/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
reliability-lab/.github/workflows/: ci.yml
reliability-lab/app/: __init__.py  main.py  reliability.py
reliability-lab/docs/: architecture.md  runbook.md
reliability-lab/infra/docker/: alerts.yml  docker-compose.yml  prometheus.yml
reliability-lab/infra/k8s/: deployment.yml  service.yml
reliability-lab/infra/terraform/: main.tf  variables.tf
reliability-lab/reliability_lab.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reliability-lab/tests/: test_api.py  test_reliability.py
