[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-simulator"
version = "0.1.0"
description = "A dependency-free reliability and chaos test runner for HTTP services."
requires-python = ">=3.11"

[project.scripts]
incident-sim = "incident_simulator.cli:main"

[tool.setuptools]
packages = ["incident_simulator"]

