[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability-lab"
version = "0.1.0"
description = "An operational reliability control plane for order-processing services."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "prometheus-client>=0.20.0",
  "pydantic>=2.8.0",
  "uvicorn[standard]>=0.30.0"
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
